# sextant

./: .gitignore  Cargo.toml  LICENSE  LOOP.md  LOOP_PROMPT.md  Makefile  README.md  cbindgen.toml
.claude/: settings.json
.woodpecker/: artifacts.yml  harness.yml
docs/: mithril-utxo-commitment-note.md  tier2-bootstrap.md  utxo-hd-format.md
examples/verified_read_gate/: gate.rs  main.rs
examples/windowed_spend_gate/: gate.rs  main.rs
include/: sextant.h
scripts/: harness.sh  loop.sh
src/: ancillary.rs  chain.rs  curve.rs  ed25519.rs  effects.rs  ffi.rs  follow.rs  hash.rs  header.rs  inclusion.rs  kes.rs  lib.rs  mithril.rs  nonce.rs  setfollow.rs  utxo.rs  utxoset.rs  vrf.rs  window.rs
tests/: boundary.rs  chain.rs  compose.rs  consumer.rs  effects.rs  ffi.rs  follow.rs  follower_ffi.rs  header_decode.rs  inclusion.rs  kes.rs  mithril.rs  mithril_anchor.rs  mithril_chain.rs  nonce.rs  opcert.rs  utxo.rs  vrf.rs  window.rs  windowed_consumer.rs
tests/smoke/: smoke.c  utxo_fixture.h
tests/vectors/: boundary-127958330.block  boundary-127958341.block  boundary-127958365.block  boundary-127958365.eta0  boundary-127958380.block  boundary-127958384.block  boundary-127958489.block  boundary-127958530.block  boundary-127958536.block  boundary-127958606.block  boundary-127958607.block  conway-indef-4933014.block  indefinite-4927467.block  invalid-mainnet-13591743.block  mainnet-192261567.block  mainnet-192261582.block  mainnet-192261594.block  mainnet-192261606.block  mainnet-192261643.block  mainnet-192261694.block  mainnet-192261704.block  mainnet-192261708.block  mainnet-192261708.eta0  mainnet-192261720.block  mainnet-192261788.block  mainnet-192261814.block  mainnet-192261821.block  mainnet-192261844.block  mainnet-192261876.block  mainnet-192261879.block  mainnet-192261893.block  mainnet-192261900.block  mainnet-192261917.block  mainnet-192261940.block  mainnet-192262009.block  mainnet-192262078.block  mainnet-192262106.block  mainnet-192262168.block  mainnet-192262175.block  mainnet-collat-overlap-9668317.block  (+44 more)
tools/guest-canary/: Cargo.toml
tools/guest-canary/src/: lib.rs
tools/harvest/: Cargo.toml
tools/harvest/src/: main.rs
tools/sentry/: Cargo.toml
tools/sentry/src/: coverage.rs  lib.rs  main.rs  transport.rs
tools/sentry/tests/: mock_peer.rs
tools/snapshot/: Cargo.toml
tools/snapshot/src/: lib.rs  state.rs  tables.rs
tools/utxo-store/: Cargo.toml
tools/utxo-store/src/: lib.rs
