[package]
name = "sextant"
version = "0.1.0"
edition = "2024"
description = "Read-path verifying Cardano client: Rust core (header VRF/KES, Mithril, UTxO verification) with C-ABI + wasm targets."
repository = "https://github.com/Flux-Point-Studios/sextant"

# The harvester lives in its own workspace member so its async/network deps
# (tokio, reqwest, pallas-network) never enter the trust-substrate lib's
# build. Harness commands operate on the `sextant` package only.
[workspace]
members = ["tools/harvest"]
resolver = "3"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
# `alloc` lets the decoder skip nested indefinite-length CBOR (real Conway tx
# bodies use it) while consuming the whole block; alloc is no_std-compatible.
minicbor = { version = "2.2.2", features = ["alloc"] }
# Cardano's leader VRF is ECVRF-ED25519-SHA512-Elligator2 (IETF draft-03). The
# Elligator2 hash-to-curve must match libsodium byte-for-byte, which upstream
# curve25519-dalek does not (sign-bit handling); Amaru's fork carries the
# single-commit fix (`hash_from_bytes` unsets the sign bit) and is what the
# Amaru node itself runs. Sextant composes its field/point primitives — the
# ECVRF verify orchestration (hash-to-curve, the two point equations, the
# challenge recomputation) is Sextant's own code path in src/vrf.rs.
curve25519-dalek = { package = "amaru-curve25519-dalek", version = "3.2.0", default-features = false, features = ["u64_backend", "alloc"] }
# SHA-512 (draft-03 suite hash) and Blake2b-256 (the Praos VRF input hash), both
# on the RustCrypto digest 0.9 family the dalek fork's `hash_from_bytes` expects.
sha2 = { version = "0.9", default-features = false }
blake2 = { version = "0.9", default-features = false }

[dev-dependencies]
hex = "0.4.3"
pallas-traverse = "1.1.1"
# Pure-Rust ECVRF advertised 100% cardano-node compatible, with its own
# libsodium-port Elligator2 hash-to-curve (`fe25519`/`elligator2`) independent
# of the dalek fork's — the differential oracle that cross-checks Sextant's
# verdict on the same inputs as the real vectors. Shares dalek for the group
# arithmetic, so its independence is in the hash-to-curve step.
cardano-crypto = "1.0.8"
