[package]
name = "sextant"
version = "0.1.0"
edition = "2024"
description = "Read-path verifying Cardano client: Rust core (header VRF/KES, Mithril, UTxO verification) with C-ABI + wasm targets."
repository = "https://github.com/Flux-Point-Studios/sextant"

# The harvester lives in its own workspace member so its async/network deps
# (tokio, reqwest, pallas-network) never enter the trust-substrate lib's
# build. Harness commands operate on the `sextant` package only.
[workspace]
members = ["tools/harvest"]
resolver = "3"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
# Mithril certificate-chain verification. OFF by default so the default lib and
# the wasm32 artifact stay lean (no JSON/serde/chrono, and — in later slices —
# no mithril-stm/blst wasm C-toolchain need). The harness exercises it on the
# host via `--all-features`; the wasm and plain release builds exclude it.
mithril = ["dep:serde", "dep:serde_json", "dep:chrono"]

[dependencies]
# `alloc` lets the decoder skip nested indefinite-length CBOR (real Conway tx
# bodies use it) while consuming the whole block; alloc is no_std-compatible.
minicbor = { version = "2.2.2", features = ["alloc"] }
# Cardano's leader VRF is ECVRF-ED25519-SHA512-Elligator2 (IETF draft-03). The
# Elligator2 hash-to-curve must match libsodium byte-for-byte, which upstream
# curve25519-dalek does not (sign-bit handling); Amaru's fork carries the
# single-commit fix (`hash_from_bytes` unsets the sign bit) and is what the
# Amaru node itself runs. Sextant composes its field/point primitives — the
# ECVRF verify orchestration (hash-to-curve, the two point equations, the
# challenge recomputation) is Sextant's own code path in src/vrf.rs.
curve25519-dalek = { package = "amaru-curve25519-dalek", version = "3.2.0", default-features = false, features = ["u64_backend", "alloc"] }
# SHA-512 (draft-03 suite hash) and Blake2b-256 (the Praos VRF input hash), both
# on the RustCrypto digest 0.9 family the dalek fork's `hash_from_bytes` expects.
sha2 = { version = "0.9", default-features = false }
blake2 = { version = "0.9", default-features = false }
# Mithril-feature-only: parse the aggregator's JSON certificate on Sextant's own
# path and compute `initiated_at`/`sealed_at` timestamp nanoseconds byte-exactly
# to mithril-common (which uses chrono). All three are optional and gated by the
# `mithril` feature, so they never enter the default/wasm trust-substrate graph.
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }
serde_json = { version = "1", default-features = false, features = ["alloc"], optional = true }
chrono = { version = "0.4", default-features = false, features = ["serde", "alloc"], optional = true }

[dev-dependencies]
hex = "0.4.3"
pallas-traverse = "1.1.1"
# Independent Ed25519 oracle for the operational-certificate differential: its
# `key::ed25519` verify runs on cryptoxide (pure-Rust), not the dalek fork
# Sextant's own path uses — so parity on the same (key, message, signature) is a
# genuine cross-implementation check, satisfying the DoD's "byte-identical
# verdicts to pallas". The non-default `kes` feature adds pallas's independent
# `Sum6Kes` verifier, the oracle for the body-signature differential; it pulls a
# few mainstream dev-only transitives (serde_with/schemars/chrono) that stay out
# of the trust-substrate lib's normal build (a dev-dependency only).
pallas-crypto = { version = "1.1.1", features = ["kes"] }
# Pure-Rust ECVRF advertised 100% cardano-node compatible, with its own
# libsodium-port Elligator2 hash-to-curve (`fe25519`/`elligator2`) independent
# of the dalek fork's — the differential oracle that cross-checks Sextant's
# verdict on the same inputs as the real vectors. Shares dalek for the group
# arithmetic, so its independence is in the hash-to-curve step.
cardano-crypto = "1.0.8"
