[package]
name = "sextant"
version = "0.1.0"
edition = "2024"
description = "Read-path verifying Cardano client: Rust core (header VRF/KES, Mithril, UTxO verification) with C-ABI + wasm targets."
repository = "https://github.com/Flux-Point-Studios/sextant"
license = "Apache-2.0"

# The harvester lives in its own workspace member so its async/network deps
# (tokio, reqwest, pallas-network) never enter the trust-substrate lib's
# build. Harness commands operate on the `sextant` package only.
[workspace]
members = ["tools/harvest", "tools/sentry", "tools/utxo-store"]
resolver = "3"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

# The Live-line consumer: a keeper/batcher stand-in that composes the shipped
# verify path (genesis-anchored Mithril chain -> certified UTxO read -> spend
# gate). It calls `verify_chain_anchored`, so it needs the `mithril` feature and
# is skipped by the default/wasm builds that keep blst out of the graph.
[[example]]
name = "verified_read_gate"
path = "examples/verified_read_gate/main.rs"
required-features = ["mithril"]

# The windowed-unspent consumer (BEYOND-DoD Tier1): authenticates the Mithril chain for
# the certified anchor, then scans a header-verified, body-committed window for a spend of
# the watched outpoint. Needs `mithril` for the anchored verify, same as the read gate.
[[example]]
name = "windowed_spend_gate"
path = "examples/windowed_spend_gate/main.rs"
required-features = ["mithril"]

[features]
# Mithril certificate-chain verification. OFF by default so the default lib and
# the wasm32 artifact stay lean (no JSON/serde/chrono, and — in later slices —
# no mithril-stm/blst wasm C-toolchain need). The harness exercises it on the
# host via `--all-features`; the wasm and plain release builds exclude it.
mithril = ["dep:chrono", "dep:mithril-stm"]

[dependencies]
# `alloc` lets the decoder skip nested indefinite-length CBOR (real Conway tx
# bodies use it) while consuming the whole block; alloc is no_std-compatible.
minicbor = { version = "2.2.2", features = ["alloc"] }
# Cardano's leader VRF is ECVRF-ED25519-SHA512-Elligator2 (IETF draft-03). The
# Elligator2 hash-to-curve must match libsodium byte-for-byte, which upstream
# curve25519-dalek does not (sign-bit handling); Amaru's fork carries the
# single-commit fix (`hash_from_bytes` unsets the sign bit) and is what the
# Amaru node itself runs. Sextant composes its field/point primitives — the
# ECVRF verify orchestration (hash-to-curve, the two point equations, the
# challenge recomputation) is Sextant's own code path in src/vrf.rs.
curve25519-dalek = { package = "amaru-curve25519-dalek", version = "3.2.0", default-features = false, features = ["u64_backend", "alloc"] }
# SHA-512 (draft-03 suite hash) and Blake2b-256 (the Praos VRF input hash), both
# on the RustCrypto digest 0.9 family the dalek fork's `hash_from_bytes` expects.
sha2 = { version = "0.9", default-features = false }
blake2 = { version = "0.9", default-features = false }
# Parse the aggregator's JSON on Sextant's own path: the default-graph
# Cardano-transactions inclusion proof (`src/inclusion.rs`, hex→JSON `MKMapProof`)
# and — under the `mithril` feature — the certificate. Both are pure-Rust and
# wasm-safe (`alloc`, no blst); serde_json's compiled-in recursion limit bounds
# the nesting of a hostile proof. chrono is mithril-only (byte-exact
# `initiated_at`/`sealed_at` timestamp nanoseconds to mithril-common's hasher).
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "alloc"], optional = true }
# Mithril-feature-only: the STM (stake-based threshold multi-signature) verify
# primitive that authorizes every *standard* certificate. Composed for the BLS
# aggregate/lottery/Merkle-batch verify only (as curve25519-dalek is composed for
# EC arithmetic); Sextant owns the orchestration — wire deserialize, parameter
# assembly, signed-message and AVK-chain binding — in src/mithril.rs. Rides blst
# `portable`; `num-integer-backend` avoids GMP (`rug`), which would break wasm —
# and the whole thing stays behind the `mithril` feature, out of default+wasm.
mithril-stm = { version = "0.10.5", default-features = false, features = ["num-integer-backend"], optional = true }

[dev-dependencies]
hex = "0.4.3"
# Load and adversarially mutate the golden `CardanoTransactionsProofs` fixture in
# the inclusion tests (the library parses the proof on its own path via the
# non-optional serde_json below; the test crate needs its own handle to build
# mutated vectors). Independent MMR oracle for the inclusion differential — the
# crate mithril's `MKProof` rides — cross-checks Sextant's recompute on
# constructed multi-leaf/multi-peak trees the single real vector does not cover.
serde_json = { version = "1", default-features = false, features = ["alloc"] }
ckb-merkle-mountain-range = "0.5.2"
pallas-traverse = "1.1.1"
# Independent transaction-output decoder oracle for the UTxO read differential:
# pallas parses the golden transaction body and its `MultiEraOutput` accessors
# yield `{address, lovelace, datum}` on a code path independent of Sextant's own
# minicbor `decode_output`, so parity is a genuine cross-implementation check (the
# same discipline the header/opcert/KES/VRF/MMR verdicts already carry). Already a
# transitive dependency of `pallas-traverse`, so it adds nothing to the lockfile.
pallas-primitives = "1.1.1"
# The pallas oracle above decodes with pallas's own `minicbor` version (distinct
# from the trust-substrate lib's `minicbor` 2.x); use its re-export so the two do
# not clash in the differential test. Transitive already, adds nothing to the lock.
pallas-codec = "1.1.1"
# Independent Ed25519 oracle for the operational-certificate differential: its
# `key::ed25519` verify runs on cryptoxide (pure-Rust), not the dalek fork
# Sextant's own path uses — so parity on the same (key, message, signature) is a
# genuine cross-implementation check, satisfying the DoD's "byte-identical
# verdicts to pallas". The non-default `kes` feature adds pallas's independent
# `Sum6Kes` verifier, the oracle for the body-signature differential; it pulls a
# few mainstream dev-only transitives (serde_with/schemars/chrono) that stay out
# of the trust-substrate lib's normal build (a dev-dependency only).
pallas-crypto = { version = "1.1.1", features = ["kes"] }
# Pure-Rust ECVRF advertised 100% cardano-node compatible, with its own
# libsodium-port Elligator2 hash-to-curve (`fe25519`/`elligator2`) independent
# of the dalek fork's — the differential oracle that cross-checks Sextant's
# verdict on the same inputs as the real vectors. Shares dalek for the group
# arithmetic, so its independence is in the hash-to-curve step.
cardano-crypto = "1.0.8"
