[package]
name = "sentry"
version = "0.1.0"
edition = "2024"
publish = false

# The live windowed-unspent follower transport (BEYOND-DoD Epic F, F6). The
# sans-io orchestration core (this lib) drives a `sextant::follow::WindowFollower`
# from resolved chain-sync events; the binary (F6b) sources those events from a
# node-to-node relay. Not part of the sextant lib or its harness.

[lib]
name = "sentry"
path = "src/lib.rs"

# The live transport demo (F6b): a bounded node-to-node chain-sync run proving the
# follower over a real relay. Network-side (the `transport` feature).
[[bin]]
name = "sextant-sentry"
path = "src/main.rs"
required-features = ["transport"]

# The watch-daemon (F6c): a long-running HTTP service that follows the chain live,
# tracks watched outpoints (one follower each over the shared block feed), and serves
# the windowed verdict over JSON — the first-consumer surface (e.g. adam-oc's fill
# pre-flight). Network + HTTP.
[[bin]]
name = "sextant-watchd"
path = "src/bin/watchd.rs"
required-features = ["daemon"]

# One-off harvest (T2b): sweep preprod for a phase-2-invalid-tx block. Not production.
[[bin]]
name = "scan-invalid"
path = "src/bin/scan_invalid.rs"
required-features = ["transport"]

# Tier-2 T4-drive: a bounded live follow proving the Tier-2 set-follower over a real relay.
# Opens the certified set at S (T3-load output), FindIntersect at the T4-tip point, and applies
# real blocks forward via setfollow::apply_block. Network-side (the `transport` feature).
[[bin]]
name = "sextant-setfollow"
path = "src/bin/setfollow.rs"
required-features = ["setfollow"]

[features]
# `transport` off by default so the sans-io lib + its mock gate build with zero network
# deps; the binaries opt in. `daemon` adds the HTTP server on top of `transport`.
transport = ["dep:tokio", "dep:pallas-network", "dep:pallas-traverse", "dep:reqwest", "dep:serde", "dep:serde_json", "dep:hex", "dep:anyhow", "sextant/mithril"]
daemon = ["transport", "dep:axum", "tokio/rt-multi-thread"]
# T4-drive: the transport plus the certified-set bootstrap (snapshot) + on-disk store.
setfollow = ["transport", "dep:snapshot", "dep:utxo-store"]

[dependencies]
# The verifier core. The lib composes only the default (wasm-safe) graph; the binaries
# enable sextant/mithril via the `transport` feature for the anchored cert verify.
sextant = { path = "../.." }
# Transport-only (the exact harvest dep set; behind the `transport` feature).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"], optional = true }
pallas-network = { version = "1.1.1", optional = true }
pallas-traverse = { version = "1.1.1", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
hex = { version = "0.4", optional = true }
anyhow = { version = "1", optional = true }
# Daemon-only HTTP server (behind the `daemon` feature).
axum = { version = "0.7", optional = true }
# T4-drive: the certified-state bootstrap + on-disk store (behind the `setfollow` feature).
snapshot = { path = "../snapshot", optional = true }
utxo-store = { path = "../utxo-store", optional = true }

[dev-dependencies]
hex = "0.4"

[[bin]]
name = "dump-block"
path = "src/bin/dumpblock.rs"
required-features = ["transport"]
