[package]
name = "snapshot"
version = "0.1.0"
edition = "2024"
publish = false

# Tier-2 T3-fetch: acquire + unpack the Mithril cardano-database ancillary (the InMemory
# UTxO-HD ledger-state snapshot). zstd/tar live HERE, in the tools workspace — never in the
# sextant trust core, which stays sans-io and wasm-safe.

[lib]
name = "snapshot"
path = "src/lib.rs"

[[bin]]
name = "snapshot-extract"
path = "src/bin/extract.rs"

[[bin]]
name = "snapshot-parse"
path = "src/bin/parse.rs"

[[bin]]
name = "snapshot-load"
path = "src/bin/load.rs"

[dependencies]
# The trust core supplies the outpoint type; the tables decode is on Sextant's own minicbor
# path, not a provider's.
sextant = { path = "../.." }
# The on-disk store the certified set is loaded into (T3-load). Native only — never the core.
utxo-store = { path = "../utxo-store" }
zstd = "0.13"
tar = "0.4"
anyhow = "1"
minicbor = { version = "2.2.2", features = ["alloc"] }
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
